# adversarial-evaluation-harness

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  results.json  run_experiment.py
adaptive_synth_eval/: __init__.py  cli.py
adaptive_synth_eval/artifacts/: exporters.py  schemas.py
adaptive_synth_eval/clients/: browser_chatbot.py  chatbot.py  chatbot_factory.py  llm.py  logger_utils.py  retry_utils.py  utils.py
adaptive_synth_eval/config/: contract.py  schemas.py
adaptive_synth_eval/engines/: chat_history_simulation.py  realtime_controls.py
adaptive_synth_eval/generation/: personas.py  scenarios.py  traffic.py  turns.py  variability.py
adaptive_synth_eval/scoring/: failure_modes.py  response_quality.py
adversarial_response_engine/: __init__.py  cli.py
adversarial_response_engine/core/: config.py  models.py  token_budget.py
analysis/: analysis.ipynb  visualize.py
contracts/: example.yaml
examples/: demo_persona_prompt.py  demo_rate_limiting.py
harness/: __init__.py  attack_agent.py  components.py  evaluator.py  llm_backends.py  llm_client.py  metrics.py  models.py  prompts.py  storage.py  target_client.py
llm_eval_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: results_20260523_024201.json  results_20260523_024207_multi.json  results_20260523_030536.json  results_20260523_030544.json
tests/: test_attack_agent.py  test_components.py  test_evaluator.py  test_llm_backends.py  test_llm_client.py  test_metrics.py  test_models.py  test_observability.py  test_prompts.py  test_storage.py  test_target_client.py  test_token_budget.py
unified_eval/: __init__.py  cli.py
(+299 files in other folders)
