[project]
name = "llm-eval-suite"
version = "0.1.0"
description = "Adversarial red-teaming harness and synthetic chatbot eval tools"
requires-python = ">=3.11"
dependencies = [
    # ── Shared (both tools) ────────────────────────────────────────────────
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "tiktoken>=0.7.0",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",

    # ── Synth eval ─────────────────────────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.3.0",
    "httpx>=0.27.0",
    "azure-identity>=1.15.0",
    "jsonpatch>=1.33",
]

[project.scripts]
are = "adversarial_response_engine.cli:main"
adversarial-eval = "adversarial_response_engine.cli:main"
adaptive-synth-eval = "adaptive_synth_eval.cli:entrypoint"
ase = "adaptive_synth_eval.cli:entrypoint"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["adversarial_response_engine*", "adaptive_synth_eval*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=9.0.3"]
cloud = [
    "boto3>=1.26.0",
    "azure-storage-blob>=12.0.0",
]
analytics = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.9.0",
]
browser = ["playwright>=1.40.0"]
observability = ["mlflow>=2.10.0"]
